diesel_compile_tests/tests/fail/derive/bad_insertable.stderr
error[E0277]: the trait bound `i32: AsExpression<diesel::sql_types::Text>` is not satisfied
  --> tests/fail/derive/bad_insertable.rs:14:5
   |
LL | #[derive(Insertable)]
   |          ---------- in this derive macro expansion
...
LL |     name: i32,
   |     ^^^^ the trait `AsExpression<diesel::sql_types::Text>` is not implemented for `i32`
   |
   = help: the following other types implement trait `AsExpression<T>`:
             `&&i32` implements `AsExpression<Nullable<diesel::sql_types::Integer>>`
             `&&i32` implements `AsExpression<diesel::sql_types::Integer>`
             `&i32` implements `AsExpression<Nullable<diesel::sql_types::Integer>>`
             `&i32` implements `AsExpression<diesel::sql_types::Integer>`
             `i32` implements `AsExpression<Nullable<diesel::sql_types::Integer>>`
             `i32` implements `AsExpression<diesel::sql_types::Integer>`
   = help: see issue #48214
   = note: this error originates in the derive macro `Insertable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `std::string::String: AsExpression<diesel::sql_types::Integer>` is not satisfied
  --> tests/fail/derive/bad_insertable.rs:12:5
   |
LL | #[derive(Insertable)]
   |          ---------- in this derive macro expansion
LL | struct User {
LL |     id: String,
   |     ^^ the trait `AsExpression<diesel::sql_types::Integer>` is not implemented for `std::string::String`
   |
   = help: the following other types implement trait `AsExpression<T>`:
             `&&std::string::String` implements `AsExpression<Citext>`
             `&&std::string::String` implements `AsExpression<Nullable<Citext>>`
             `&&std::string::String` implements `AsExpression<Nullable<diesel::sql_types::Date>>`
             `&&std::string::String` implements `AsExpression<Nullable<diesel::sql_types::Text>>`
             `&&std::string::String` implements `AsExpression<Nullable<diesel::sql_types::Time>>`
             `&&std::string::String` implements `AsExpression<Nullable<diesel::sql_types::Timestamp>>`
             `&&std::string::String` implements `AsExpression<diesel::sql_types::Date>`
             `&&std::string::String` implements `AsExpression<diesel::sql_types::Text>`
           and N others
   = help: see issue #48214
   = note: this error originates in the derive macro `Insertable` (in Nightly builds, run with -Z macro-backtrace for more info)
For more information about this error, try `rustc --explain E0277`.
